tests/miniJava/neg/000018_mutation.MiniJava
class extends { public static void Main ( String [ ] java ) { { } } }
